--- a/rate-my-club/src/index.css
+++ b/rate-my-club/src/index.css
@@ -11,3 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.bg_color{
+  background-color: F7F2E5;
+}
