Add bottom padding to button

--- a/rate-my-club/src/App.css
+++ b/rate-my-club/src/App.css
@@ -7,7 +7,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
 }
 
 .logo {
@@ -70,6 +69,7 @@
 .button-text {
   position: relative;
   top: 55px;
+  padding-bottom: 50px;
 }
 
 /* <---------------------------------NAV BAR STYLING--------------------------------------> */
