--- a/rate-my-club/src/App.css
+++ b/rate-my-club/src/App.css
@@ -114,3 +114,22 @@
   background-color: white;
   color: black;
 }
+
+.navBar-dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.navBar-dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: white;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.navBar-dropdown:hover .navBar-dropdown-content {
+  display: block;
+}
