--- a/rate-my-club/src/index.css
+++ b/rate-my-club/src/index.css
@@ -1,3 +1,5 @@
+
+
 body {
   margin: 0;
   background: #f7f2e5;
@@ -10,4 +12,166 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+/* <------------------------------LANDING PAGE STYLING--------------------------------------> */
+
+.main {
+  position:relative;
+  margin:0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo {
+  position: absolute;
+  width: 320px;
+  height: 300px;
+  top: 140px;
+}
+
+.search-bar {
+  background: #FFFFFF;
+  border: 1px solid #000000;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  font-family: 'Open Sans';
+  font-size: 16px;
+  padding-left: 10px;
+  position: absolute;
+  width: 530px;
+  height: 47px;
+  top: 450px;
+}
+
+.search-icon {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: 465px;
+  margin-left: 505px;
+}
+
+.button-container {
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  gap: 100px;
+  top: 535px;
+}
+
+.clubs-icon {
+  position: absolute;
+  width: 45px;
+  height: 45px;
+  padding-left: 8px;
+}
+
+.profile-icon {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+}
+
+.landing-button {
+  border: none;
+  background: none;
+  font-family: 'Open Sans';
+  font-size: 16px;
+}
+
+.button-text {
+  position: relative;
+  top: 55px;
+  padding-bottom: 50px;
+}
+
+/* <---------------------------------NAV BAR STYLING--------------------------------------> */
+.navBar {
+  background: #000000;
+  width: 100vw;
+  top: 0px;
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.club-logo {
+  position: relative;
+  width: 30px;
+  height: 30px;
+  padding-top: 7px;
+  padding-left: 7px;
+}
+
+.navBar-buttons {
+  display: flex;
+  gap: 10px;
+  padding-right: 10px;
+}
+
+.navBar-button {
+  background-color: #577B5F;
+  border-radius: 8px;
+  font-family: 'Open Sans';
+  font-size: 16px;
+  border: none;
+  color: white;  
+  height: 30px;
+  padding-left: 16px;
+  padding-right: 16px;
+  transition-duration: 0.4s;
+}
+
+.navBar-button:hover {
+  background-color: white;
+  color: black;
+}
+
+
+.navbar-dropdown-menu{
+  position: absolute;
+  top: 50px;
+  right: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  padding: 0px 0px;
+  width: 250px;
+  
+
+}
+
+.navbar-dropdownItem{
+  display: flex;
+  margin: 10px;
+}
+
+
+
+
+.navbar-dropdownItem a{
+  max-width: 250px;
+  font-family: 'Open Sans';
+  transition: var(--speed);
+}
+
+.navbar-dropdownItem a:hover{
+  color: #577B5F;
+}
+
+.navbar-dropdown-menu.active{
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+  transition: var(--speed) ease;
+}
+
+.navbar-dropdown-menu.inactive{
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-20px);
+  transition: var(--speed) ease;
 }
