creating simple register user page and fixed logo display issue

--- a/rate-my-club/src/index.css
+++ b/rate-my-club/src/index.css
@@ -1,5 +1,3 @@
-
-
 body {
   margin: 0;
   background: #f7f2e5;
@@ -188,7 +186,7 @@ code {
   border-radius: 5px;
   padding: 0px 0px;
   width: 70vw;
-  height: 100%;
+  height: 1000px;
   border-color: #577B5F;
   border-style: solid;
   
@@ -268,6 +266,31 @@ code {
   top: 460px;
 }
 
+.register-select-box {
+  background: #FFFFFF;
+  border: 1px solid #000000;
+  border-radius: 0;
+  font-family: 'Open Sans';
+  font-size: 16px;
+  left: 10vw;
+  right: 10vw;
+  position: absolute;
+  width: 50vw;
+  height: 50px;
+  top: 710px;
+}
+
+.register-select-menu {
+  background: #FFFFFF;
+  right: 0px;
+  position: absolute;
+  width: fit-content;
+  height: 50px;
+  
+  display: flex;
+}
+
+
 .register-text {
   left: 10vw;
   right: 10vw;
@@ -280,7 +303,7 @@ code {
 
 .register-logo {
   position: absolute;
-  width: 16vw;
+  width: 150px;
   /* height: 100px; */
   top: 50px;
   left: 42vw;
@@ -301,6 +324,30 @@ code {
   position: relative;
   top: 110px;
 }
+
+/* <---------------------------------REGISTER USER PAGE STYLING--------------------------------------> */
+
+
+
+.register-user-backdrop{
+  position: absolute;
+  top: 290px;
+  right: 15vw;
+  left: 15vw;
+  background-color: white;
+  border-radius: 5px;
+  padding: 0px 0px;
+  width: 70vw;
+  height: 600px;
+  border-color: #577B5F;
+  border-style: solid;
+  
+}
+
+
+
+
+
 
 
 
