--- a/rate-my-club/src/index.css
+++ b/rate-my-club/src/index.css
@@ -138,11 +138,10 @@ code {
 .navbar-dropdown-menu{
   position: absolute;
   top: 50px;
-  right: 20px;
+  right: 1px;
   background-color: #fff;
   border-radius: 8px;
-  padding: 0px 0px;
-  width: 250px;
+  width: 240px;
 }
 
 .navbar-dropdownItem{
@@ -302,7 +301,120 @@ code {
   top: 110px;
 }
 
+/* <---------------------------------LOGIN PAGE STYLING--------------------------------------> */
 
+.login-page {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 150px;
+}
 
+.login-container {
+  width: 350px;
+  height: 410px;  
+  background: #FFFFFF;
+  border: 0.7px solid #777777;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 14px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  row-gap: 18px;
+  justify-content: center;
+  align-items: center;
+}
 
+.login-bigtext {
+  color: black;
+  font-weight: bold;
+  padding-right: 180px;
+  font-size: 19px;
+  letter-spacing: 1px;
+}
 
+.login-input {
+  border: 0.2px solid #777777;
+  border-radius: 5px;
+  padding-left: 5px;
+  width: 230px;
+  height: 30px;
+  font-family: 'Open Sans';
+  font-size: 13px;
+}
+
+.login-button {
+  background: #577B5F;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  width: 240px;
+  height: 33px;
+  font-size: 14px;
+  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
+  transition-duration: 0.4s;
+}
+
+.login-button:hover {
+  background-color: white;
+  color: #777777;
+  border: 0.5px solid #577B5F;
+}
+
+.line-text {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.line {
+  flex: 1;
+  height: 0.3px;
+  width: 95px;
+  border: none;
+  background-color: #777777;
+}
+
+.or-text {
+  width: 50px;
+  font-size: 13px;
+  text-align: center;
+}
+
+.google-logo {
+  width: 26px;
+  height: 26px;
+  padding-left: 20px;
+  padding-right: 10px;
+}
+
+.google-signin {
+  display: flex;
+  align-items: center;
+  background-color: white;
+  border: 0.2px solid #777777;
+  border-radius: 5px;
+  width: 240px;
+  height: 33px;
+  font-weight: bold;
+  font-family: 'Open Sans';
+  font-size: 14px;
+  color: black;
+  letter-spacing: 0.4px;
+}
+
+.register-redirect {
+  font-size: 11.5px;
+  color: black;
+  font-weight: 600;
+  letter-spacing: 0.2px;
+}
+
+.register-here {
+  color: #577B5F;
+}
+
+.register-here:hover {
+  text-decoration: underline;
+}
