--- a/rate-my-club/src/index.css
+++ b/rate-my-club/src/index.css
@@ -197,8 +197,8 @@ code {
 
 .register-clubname-box {
   background: #FFFFFF;
-  border: 1px solid #000000;
-  border-radius: 0;
+  border: 0.5px solid #777777;
+  border-radius: 5px;
   font-family: 'Open Sans';
   font-size: 16px;
   left: 10vw;
@@ -211,8 +211,8 @@ code {
 
 .register-abbreviation-box {
   background: #FFFFFF;
-  border: 1px solid #000000;
-  border-radius: 0;
+  border: 0.5px solid #777777;
+  border-radius: 5px;
   font-family: 'Open Sans';
   font-size: 16px;
   left: 10vw;
@@ -225,8 +225,8 @@ code {
 
 .register-email-box {
   background: #FFFFFF;
-  border: 1px solid #000000;
-  border-radius: 0;
+  border: 0.5px solid #777777;
+  border-radius: 5px;
   font-family: 'Open Sans';
   font-size: 16px;
   left: 10vw;
@@ -239,8 +239,8 @@ code {
 
 .register-website-box {
   background: #FFFFFF;
-  border: 1px solid #000000;
-  border-radius: 0;
+  border: 0.5px solid #777777;
+  border-radius: 5px;
   font-family: 'Open Sans';
   font-size: 16px;
   left: 10vw;
@@ -253,8 +253,8 @@ code {
 
 .register-description-box {
   background: #FFFFFF;
-  border: 1px solid #000000;
-  border-radius: 0;
+  border: 0.5px solid #777777;
+  border-radius: 5px;
   font-family: 'Open Sans';
   font-size: 16px;
   left: 10vw;
@@ -267,8 +267,8 @@ code {
 
 .register-select-box {
   background: #FFFFFF;
-  border: 1px solid #000000;
-  border-radius: 0;
+  border: 0.5px solid #777777;
+  border-radius: 5px;
   font-family: 'Open Sans';
   font-size: 16px;
   left: 10vw;
@@ -295,7 +295,7 @@ code {
   right: 10vw;
   font-family: 'Open Sans';
   font-size: 16px;
-  color: #000000;
+  color: #777777;
   position: absolute;
   top: 415px;
 }
