--- a/rate-my-club/src/index.css
+++ b/rate-my-club/src/index.css
@@ -13,8 +13,6 @@ code {
     monospace;
 }
 
-
-
 /* <------------------------------LANDING PAGE STYLING--------------------------------------> */
 
 .main {
@@ -180,6 +178,8 @@ code {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-right: 10%;
+  margin-left: 10%;
   row-gap: 10px;
 }
 
@@ -225,6 +225,7 @@ code {
   padding-left: 10px;
   width: 50vw;
   height: 50px;
+  border-radius: 5px;
 }
 
 .club-description-text {
@@ -241,7 +242,7 @@ code {
 
 .register-button {
   background-color: #577B5F;
-  border-radius: 18px;
+  border-radius: 8px;
   font-family: 'Open Sans';
   font-size: 16px;
   border: none;
@@ -259,20 +260,23 @@ code {
   border: 0.5px solid #577B5F;
 }
 
-/* <---------------------------------REGISTER USER PAGE STYLING--------------------------------------> */
+/* <---------------------------------REGISTER USER PAGE STYLING--------------------------------> */
 
-.register-user-backdrop{
-  position: absolute;
-  top: 290px;
-  right: 15vw;
-  left: 15vw;
+.register-user-page-backdrop{
+  position: relative;
+  margin-top: 120px;
+  bottom: 40px;
   background-color: white;
-  border-radius: 5px;
-  padding: 0px 0px;
+  border-radius: 10px;
   width: 70vw;
-  height: 600px;
-  border-color: #577B5F;
-  border-style: solid;
+  height: 450px;
+  border: 0.7px solid black;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  display: flex;
+  flex-direction: column;
+  row-gap: 25px;
+  justify-content: center;
+  align-items: center;
 }
 
 /* <---------------------------------LOGIN PAGE STYLING--------------------------------------> */
@@ -282,7 +286,15 @@ code {
   display: flex;
   justify-content: center;
   align-items: center;
-  top: 150px;
+  flex-direction: column;
+  top: 50px;
+  margin-right: 10%;
+  margin-left: 10%;
+}
+
+.login-logo {
+  position: relative;
+  width: 150px;
 }
 
 .login-container {
