--- a/rate-my-club/src/index.css
+++ b/rate-my-club/src/index.css
@@ -209,7 +209,7 @@ code {
   background-color: white;
   border-radius: 10px;
   width: 70vw;
-  height: 950px;
+  height: 1050px;
   border: 0.7px solid black;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   display: flex;
@@ -228,6 +228,79 @@ code {
   width: 50vw;
   height: 50px;
   border-radius: 5px;
+}
+
+.dropdown-container {
+  text-align: left;
+  border: 0.5px solid black;
+  font-family: 'Open Sans';
+  background-color: white;
+  color: black;
+  border-radius: 5px;
+  font-size: 16px;
+  border-radius: 5px;
+}
+
+.dropdown-input {
+  padding-right: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  user-select: none;
+  width: 49.5vw;
+  height: 53px;
+  padding-left: 10px;
+}
+
+.dropdown-menu {
+  position: absolute;
+  transform: translateY(4px);
+  width: 50.8vw;
+  border: 1px solid #777777;
+  border-radius: 5px;
+  overflow: auto;
+  max-height: 150px;
+  background-color: white;
+}
+
+.dropdown-item {
+  padding: 5px;
+  padding-left: 8px;
+  color: black;
+}
+
+.dropdown-item.selected {
+  background-color: #d9d9d9;
+}
+
+.dropdown-item:hover {
+  background-color: #d9d9d9;
+}
+
+.dropdown-tags {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+}
+
+.dropdown-tag-item {
+  background-color: #d9d9d9;
+  padding: 4px 7px;
+  border-radius: 2px;
+  display: flex;
+  align-items: center;
+}
+
+.dropdown-tag-close {
+  display: flex;
+  align-items: center;
+  padding-top: 2px;
+  padding-left: 3px;
+}
+
+.close-icon {
+  width: 18px;
+  height: 18px;
 }
 
 .club-description-text {
@@ -292,8 +365,6 @@ code {
   top: 50px;
   margin-right: 10%;
   margin-left: 10%;
-
-
 }
 
 .login-logo {
@@ -319,9 +390,7 @@ code {
 .login-logo {
   position: relative;
   display: flex;
-  
   width: 150px;
-  /* top: 50px; */
 }
 
 .login-bigtext {
