--- a/rate-my-club/src/index.css
+++ b/rate-my-club/src/index.css
@@ -659,8 +659,11 @@ textarea:focus{
   border: none;
   color: black;  
   height: 30px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   padding-left: 16px;
   padding-right: 16px;
+  height:auto;
 
   
 }
