--- a/rate-my-club/src/index.css
+++ b/rate-my-club/src/index.css
@@ -574,6 +574,12 @@ textarea:focus{
   text-decoration-thickness: 2px; */
 }
 
+.clubs-filter-sort {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
 .clubs-filter {
   background-color: #131b1b;
     position: relative;
@@ -581,12 +587,30 @@ textarea:focus{
     flex-direction: column;
     row-gap: 45px;
     justify-content: left;
-    width: 350px;
+    width: 250px;
     border-radius: 5px;
     border-color: #577B5F;
     height: 400px;
     padding-right: 20px;
     padding-left: 10px;
+    border: 0.7px solid #577B5F;
+    box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
+}
+
+.clubs-sort {
+  background-color: #74a67f;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    row-gap: 45px;
+    justify-content: left;
+    width: 250px;
+    border-radius: 5px;
+    border-color: #577B5F;
+    height: 170px;
+    padding-right: 20px;
+    padding-left: 10px;
+    margin-top: 50px;
     border: 0.7px solid #577B5F;
     box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
 }
