--- a/rate-my-club/src/index.css
+++ b/rate-my-club/src/index.css
@@ -676,6 +676,7 @@ a:-webkit-any-link {
   background-color: #577B5F;
   color: white;
   padding: 4px 7px;
+  margin-top: 5px;
   border-radius: 2px;
   display: flex;
   align-items: center;
@@ -697,10 +698,11 @@ a:-webkit-any-link {
   border-radius: 8px;
   font-family: 'Open Sans';
   font-size: 14px;
-  padding-top: 7px;
+  padding-top: 0px;
   padding-bottom: 5px;
   padding-left: 12px;
   height:auto;
+  flex-wrap: wrap;
 }
 
 .club-name-tag {
