--- a/rate-my-club/src/index.css
+++ b/rate-my-club/src/index.css
@@ -838,22 +838,26 @@ a:-webkit-any-link {
   position: relative;
   display: flex;
   flex-direction: column;
-  row-gap: 0px;
   justify-content: left;
-  width: 200px;
-  height: 220px;
+  width: 230px;
+  height: 250px;
   border: 1px solid #577B5F;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  padding: 10px;
+  padding: 15px;
 }
 
 .stars {
   position: relative;
   display: flex;
   flex-direction: row;
-  column-gap: 10px;
   justify-content: center;
-  width: 200px;
+  color: #577B5F;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.star {
+  padding-right: 3px;
 }
 
 .total-review{
@@ -862,7 +866,7 @@ a:-webkit-any-link {
   flex-direction: column;
   row-gap: 0px;
   justify-content: center;
-  width: 200px;
+  width: 180px;
   height: 220px;
   padding: 10px;
   text-align: center;
@@ -925,11 +929,6 @@ a:-webkit-any-link {
   size: 80;
 }
 
-.bookmark:hover{
-  color:#577B5F;
-  size: 30;
-}
-
 .profile-tags {
   position: relative;
   display: flex;
@@ -977,24 +976,28 @@ a:-webkit-any-link {
 
 .user-review-display{
   position: relative;
-  /* bottom: 40px; */
-  height: auto;
+  margin-top: 10px;
   display: flex;
   flex-direction: row;
   column-gap: 35px;
   justify-content: left;
   align-content: left;
-  width: 800px;
+  margin-right: 5vw;
+  padding-bottom: 40px;
+  overflow-x: scroll;
+}
+
+.review-content {
+  position: relative;
+  height: 80px;
 }
 
 .edit-buttons {
   position: relative;
   display: flex;
   flex-direction: row;
-  column-gap: 10px;
-  justify-content: bottom;
-  width: fit-content;
-  
+  column-gap: 20px;
+  justify-content: center;
 }
 
 .edit-review-button {
@@ -1030,19 +1033,24 @@ a:-webkit-any-link {
 .edit-review-button:hover {
   background-color: white;
   color: #577B5F;
-  border: 2px solid #577B5F;
+  border: 0.5px solid #577B5F;
 }
 
 .delete-review-button:hover {
   background-color: white;
   color: #D74D4D;;
-  border: 2px solid #D74D4D;
+  border: 0.5px solid #D74D4D;
 }
 
 .bookmark-club-display{
   display: flex;
   position: relative;
   flex-direction: row;
+}
+
+.userpage-bookmark {
+  padding-top: 30px;
+  color: #577B5F;
 }
 
 
