--- a/rate-my-club/src/index.css
+++ b/rate-my-club/src/index.css
@@ -823,7 +823,7 @@ a:-webkit-any-link {
   padding-right: 40px;
   padding-bottom: 20px;
   margin-top: 70px;
-  width: 55%;
+  width: 60%;
 }
 
 .club-name {
@@ -971,7 +971,6 @@ a:-webkit-any-link {
 }
 
 .club-updates {
-  /* background-color: #131b1b; */
   background-color: #577B5F;
   position: relative;
   display: flex;
@@ -989,6 +988,19 @@ a:-webkit-any-link {
   padding-bottom: 30px;
   border: 0.7px solid #577B5F;
   box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
+}
+
+.update-backdrop{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+  background-color: #fff;
+  border: 0.7px solid #f7f2e5;
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
+  border-radius: 3px;
+  padding: 10px;
+  font-weight: 400;
 }
 
 /* <------------------------------USER PROFILE PAGE STYLING--------------------------------------> */
