--- a/rate-my-club/src/index.css
+++ b/rate-my-club/src/index.css
@@ -1127,3 +1127,56 @@ a:-webkit-any-link {
   margin-top: 15px;
 }
 
+#overlay {
+  position: fixed; /* Sit on top of the page content */
+  display: none; /* Hidden by default */
+  width: 100%; /* Full width (cover the whole page) */
+  height: 100%; /* Full height (cover the whole page) */
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5); /* Black background with opacity */
+  z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+  cursor: pointer; /* Add a pointer on hover */
+}
+
+
+.review-page{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-right: 10%;
+  margin-left: 10%;
+  row-gap: 10px;
+}
+
+.review-page-backdrop{
+  position: relative;
+  margin-top: 120px;
+  bottom: 40px;
+  background-color: white;
+  border-radius: 10px;
+  width: 60vw;
+  height: fit-content;
+  border: 0.7px solid black;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  display: flex;
+  flex-direction: column;
+  row-gap: 25px;
+  justify-content: center;
+  align-items: left;
+  padding: 20px;
+}
+
+.review-stars {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  color: #577B5F;
+  column-gap: 8px;
+}
+
