--- a/rate-my-club/src/index.css
+++ b/rate-my-club/src/index.css
@@ -15,16 +15,17 @@ code {
 
 select {
   outline: 0;
-  background: #577B5F;
-  width: 180px;
+  background: white;
+  width: 80;
   height: 33px;
-  color: white;
+  color: black;
   cursor: pointer;
   border-radius: 8px;
   font-size: 16px;
   font-family: 'Open Sans';
   padding-left: 1%;
 }
+
 
 input:focus {
   outline-color: #577B5F;
@@ -283,26 +284,6 @@ a:-webkit-any-link {
 }
 
 .register-button:hover {
-  background-color: white;
-  color: black;
-  border: 0.5px solid #577B5F;
-}
-
-.submit-button {
-  background-color: #577B5F;
-  border-radius: 8px;
-  font-family: 'Open Sans';
-  font-size: 16px;
-  border: none;
-  color: white;  
-  font-weight: bold;
-  letter-spacing: 0.5px;
-  height: 37px;
-  width: 115px;
-  transition-duration: 0.4s;
-}
-
-.submit-button:hover {
   background-color: white;
   color: black;
   border: 0.5px solid #577B5F;
@@ -570,7 +551,7 @@ a:-webkit-any-link {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   display: flex;
   flex-direction: row;
-  margin-top: 115px;
+  margin-top: 65px;
   column-gap: 42px;
   padding: 0px 30px 30px 30px;
   justify-content: left;
@@ -583,6 +564,12 @@ a:-webkit-any-link {
   position: relative;
   top: 40px;
   font-size: 2em;
+}
+
+.clubs-smalltext {
+  padding-top: 20px;
+  position: relative;
+  font-size: 1.2em;
 }
 
 .clubs-filter-sort {
@@ -629,6 +616,12 @@ a:-webkit-any-link {
   margin-top: 30px;
   border: 0.7px solid #577B5F;
   box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
+}
+.club-cards{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px;
 }
 
 .clubs-text{
