--- a/rate-my-club/src/index.css
+++ b/rate-my-club/src/index.css
@@ -101,6 +101,24 @@ a:-webkit-any-link {
   height: 50px;
 }
 
+
+.icon:hover {
+  color: #577B5F;
+}
+/* 
+.profile-icon:hover {
+  position: absolute;
+  width: 60px;
+  height: 60px;
+}
+
+.clubs-icon:hover {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  padding-bottom: 10px;
+} */
+
 .landing-button {
   border: none;
   background: none;
