finished nav bar

--- a/rate-my-club/src/index.css
+++ b/rate-my-club/src/index.css
@@ -176,6 +176,15 @@ a:-webkit-any-link {
   color: black;
 }
 
+.navBar-icon{
+  color: #577B5F
+}
+
+.navBar-icon:hover{
+  color: #fff
+}
+
+
 
 .navbar-dropdown-menu{
   position: absolute;
